# Vitech

./: index.js  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: App.js  App.jsx
client/src/admin/dashboard/: Dashboard.jsx  Idea-forum.jsx  QueriesPage.jsx  UserDashboard.jsx
client/src/admin/events/: CreateEvent.jsx  EditEvent.jsx  Events.jsx  Participants.jsx
client/src/admin/merchandise/: MerchandiseSales.jsx
client/src/components/: Card.jsx  Chart.jsx  Eventcard.jsx  Header.jsx  MerchandiseCard.jsx  Sidebar.jsx  SidebarUser.jsx
client/src/components/user/: Eventcard.jsx
client/src/login/: Login.jsx
client/src/pages/: Login.jsx  Signup.jsx  UserHome.jsx
server/: Cargo.toml
server/src/: main.rs
