[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
rust-embed = "8.5.0"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5", features = ["util","limit"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace","cors","normalize-path","timeout"] }